# WHS2_WeArePotato

./: 0710_preprocessing_pypi.py  LICENSE  decompressor.py  detect_preprocessing.py  feature.py  feature_extractor.py  file_counter.py  list.py  mal_preprocessing.py  mal_preprocessing_pypi.py  npmtest.py  pypi_crawling.py  randomforest_validation.ipynb  randomforest_validation_LJK.ipynb  temp.py  test.py  val_preprocessing_pypi.py  xgboost_validation.ipynb  xgboost_validation_LJK.ipynb
data/pypi/malicious-software-packages-dataset-main/pypi/: pyproject.toml
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqedpushvm-v8.61/: package_info-esqedpushvm-8.61.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqgamereplacetool-v8.91/: package_info-esqgamereplacetool-8.91.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqloadhackednvidia-v4.86/: package_info-esqloadhackednvidia-4.86.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqnvidiavmget-v1.15/: package_info-esqnvidiavmget-1.15.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqposthackedver-v2.14/: package_info-esqposthackedver-2.14.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqproofpostpull-v10.60/: package_info-esqproofpostpull-10.60.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqrandadget-v3.2/: package_info-esqrandadget-3.2.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqreinfore-v5.34/: package_info-esqreinfore-5.34.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqrepymc-v5.43/: package_info-esqrepymc-5.43.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqstringvirtualtool-v5.32/: package_info-esqstringvirtualtool-5.32.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqultralgtbhydra-v8.19/: package_info-esqultralgtbhydra-8.19.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqvirtualintpep-v2.60/: package_info-esqvirtualintpep-2.60.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-esqvisaverload-v3.62/: package_info-esqvisaverload-3.62.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libcandyadhydra-v9.66/: package_info-libcandyadhydra-9.66.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libguicraftcandy-v10.87/: package_info-libguicraftcandy-10.87.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libhttppostpost-v10.70/: package_info-libhttppostpost-10.70.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libintelpostlib-v6.37/: package_info-libintelpostlib-6.37.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libkillmaskhydra-v2.69/: package_info-libkillmaskhydra-2.69.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libloadhackedpyw-v8.65/: package_info-libloadhackedpyw-8.65.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libnvidiareplacerandom-v3.3/: package_info-libnvidiareplacerandom-3.3.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libpingverrand-v2.34/: package_info-libpingverrand-2.34.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libpostpullpaypal-v10.22/: package_info-libpostpullpaypal-10.22.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libstrproofurl-v3.10/: package_info-libstrproofurl-3.10.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-liburlpywpost-v1.1/: package_info-liburlpywpost-1.1.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libvisapullpaypal-v6.89/: package_info-libvisapullpaypal-6.89.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libvisasupergrand-v6.90/: package_info-libvisasupergrand-6.90.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-libvisaurlgui-v9.72/: package_info-libvisaurlgui-9.72.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-hackedultratool-v7.16/: package_info-py-hackedultratool-7.16.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-infoliblgtb-v1.39/: package_info-py-infoliblgtb-1.39.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-intelcpusuper-v6.44/: package_info-py-intelcpusuper-6.44.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-intverpyw-v8.14/: package_info-py-intverpyw-8.14.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-libloadcandy-v6.29/: package_info-py-libloadcandy-6.29.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-libpipintel-v8.77/: package_info-py-libpipintel-8.77.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-masksuperpyw-v8.89/: package_info-py-masksuperpyw-8.89.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-pingedpyw-v7.29/: package_info-py-pingedpyw-7.29.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-pywvisakill-v10.7/: package_info-py-pywvisakill-10.7.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-replaceultragrand-v7.17/: package_info-py-replaceultragrand-7.17.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-strramgui-v5.2/: package_info-py-strramgui-5.2.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-studytoolping-v8.22/: package_info-py-studytoolping-8.22.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-studyvmpyw-v3.77/: package_info-py-studyvmpyw-3.77.json
data/pypi/malicious-software-packages-dataset-main/pypi/2023-02-27-py-virtualcontrolgame-v6.43/: package_info-py-virtualcontrolgame-6.43.json
(+29407 files in other folders)
