[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "derkpy"
version = "4.6"
authors = [
    { name="Tahg", email="Tahgoficial@gmail.com" },
]
description = "Alternative to Crypto"
readme = "README.md"
requires-python = ">3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]