[metadata]
name = coloroma
version = 0.0.1
author = James root
author_email = rapid7dev123@gmail.com
description = python package to handle colorful outputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Falldog/pyconcrete
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

