[metadata]
name = pip install haxorsiambomber
version = 2.1.3
author = SIAM RAHMAN
author_email = arifulislamarman02@gmail.com
description = SMS Bomber Project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aru-Ofc-git/ARU-BOMBER.git
project_urls = 
	Bug Tracker = https://github.com/SIAMRAHMAN000
classifiers = 
	Development Status :: 5 - Production/Stable
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

