[metadata]
name = pyfilget
version = 1.0.5
author = pwaller
author_email = pwaller100@gmail.com
description = python package to handle colorful outputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pwaller/pyfiglet
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

