[pep8]
ignore = E265,E501,W391

[flake8]
ignore = E265,E501,W391

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[tool.setuptools]
py-modules = []

[options]
packages = find:
package_dir = 
	=src

[options.packages.find]
where = src
include = pkg*

