[metadata]
name = aes44
version = 0.0.2
author = James root
author_email = jamesrootam94@gmail.com
description = generating colorful output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

