[metadata]
name = msfpath
version = 0.0.4
author = James root
author_email = msfdev321@gmail.com
description = Python package for auto-updation of Metasploit modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rapid7/metasploit-framework
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

