[bdist_wheel]
universal = 1

[metadata]
name = SIAMTTVIEW
version = 1.0.0
author = SIAM RAHMAN
author_email = s14mbro1@gmail.com
description = 'A Tiktok Views Tool'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SIAMRAHMAN000
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
license_file = LICENSE

[egg_info]
tag_build = 
tag_date = 0

