[metadata]
name = a1rn
version = 0.1.4
author = a1rn
author_email = ctf@example.com
description = 'for ctf'
classifiers = 
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7

[egg_info]
tag_build = 
tag_date = 0

