[metadata]
name = Pystyte
version = 3.5.5
author = Ayumu
author_email = Ayumu-1337@proton.me
description = A mod for style
long_description = A mod for style
long_description_content_type = text/markdown
url = https://youtu.be/dQw4w9WgXcQ
project_urls = 
	Bug Tracker = https://youtu.be/dQw4w9WgXcQ
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

