[metadata]
name = aws-login0tool
version = 0.0.1
author = Example Author
author_email = author@example.com
description = http:/example.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
project_urls = 
	Bug Tracker = http://example.com
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

