[metadata]
name = dlcsord
version = 1.0.3
author = Ayumu
author_email = Ayumu-1337@proton.me
description = A mod
long_description = A mod
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

