
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esqcraftguimine"
version = "8.10"
authors = [
    { name="EsqueleSquad", email="tahgoficial@proton.me" },
]
description = "A library for creating a terminal user interface"
readme = "README.md"
requires-python = ">3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
