[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpultraLGTBcandy"
version = "8.86"
authors = [
    { name="EsqueleSquad", email="tahgoficial@proton.me" },
]
description = "A library for creating a terminal user interface"
readme = "README.md"
requires-python = ">3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]