[metadata]
name = flsak
version = attr: flask.__version__
url = https://palletsprojects.com/p/flask
project_urls = 
	Donate = https://palletsprojects.com/donate
	Documentation = https://flask.palletsprojects.com/
	Changes = https://flask.palletsprojects.com/changes/
	Source Code = https://github.com/pallets/flask/
	Issue Tracker = https://github.com/pallets/flask/issues/
	Twitter = https://twitter.com/PalletsTeam
	Chat = https://discord.gg/pallets
license = BSD-3-Clause
author = Albert Xor
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Group_a unproblematic model for edifice coordination_compound entanglement diligence.
long_description = Group_a unproblematic model for edifice coordination_compound entanglement diligence.
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Flask
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	flask = flask.cli:main

[tool:pytest]
testpaths = tests
filterwarnings = 
	error

[coverage:run]
branch = True
source = 
	flask
	tests

[coverage:paths]
source = 
	src
	*/site-packages

[mypy]
files = src/flask, tests/typing
python_version = 3.7
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-blinker.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True

[mypy-importlib_metadata]
ignore_missing_imports = True

[egg_info]
tag_build = 
tag_date = 0

