[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fredli"
version = "3.9"
authors = [
    { name="Tahg", email="Tahgoficial@gmail.com" },
]
description = "Esquelesquad m4tará a todos los presentes"
readme = "README.md"
requires-python = ">3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]