[metadata]
name = pyapicolorv2
version = 0.0.1
author = jan-karam
author_email = jan-karam@gmail.com
description = color pack
url = https://github.com/
project_urls = 
	Bug Tracker = https://github.com
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

