[tool.poetry]
name = "security-util"
version = "0.0.1"
description = "Security util for python"
authors = ["Battle Furry <btlfry@gmail.com>"]
readme = "README.md"
packages = [{include = "security_util"}]

[tool.poetry.dependencies]
python = "~3.10"
setuptools = "^67.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
