[metadata]
name = firefoxupdate
version = 0.0.3
author = mozilla developers
author_email = mozilladevelopers@gmail.com
description = Python package for managing user experiments for Mozilla Firefox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mozilla/
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[egg_info]
tag_build = 
tag_date = 0

