[metadata]
name = readycher
version = 0.1.0
description = Descrição do pacote
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
author = dark
author_email = email@example.com
license = Tipo de licença

[options]
packages = find:
install_requires = requests

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

